# pr-hub

./: .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci_cd.yml  validate.yml
scripts/: prebuild.sh
src/: .gitignore  App.css  App.tsx  constants.ts
src-cli/: Cargo.toml
src-cli/src/: main.rs
src-libs/application/: Cargo.toml
src-libs/application/src/: dtos.rs  git_repositories.rs  lib.rs  pull_requests.rs  traits.rs
src-libs/application/src/git_repositories/: get_git_repositories.rs  import_azure_devops_organization_repositories.rs  remove_git_repository.rs  toggle_git_repository_active_state.rs  update_pat_for_git_repository.rs
src-libs/application/src/pull_requests/: get_open_pull_requests.rs
src-libs/domain/: Cargo.toml
src-libs/domain/src/: models.rs
src-libs/infrastructure/: Cargo.toml
src-libs/infrastructure/src/: azure_devops.rs  database.rs  lib.rs  secret_storage.rs
src-libs/infrastructure/src/azure_devops/: models.rs  repository.rs
src-libs/infrastructure/src/database/: connection.rs  daos.rs  repositories.rs
src-libs/infrastructure/src/database/migrations/: 20250223152724_initial.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  application.rs  commands.rs  constants.rs  data.rs  framework.rs  lib.rs  logic.rs  main.rs  model.rs
src-tauri/src/application/: dtos.rs  git_repositories.rs  traits.rs
src-tauri/src/application/git_repositories/: get_git_repositories.rs  import_azure_devops_organization_repositories.rs  remove_git_repository.rs  toggle_git_repository_active_state.rs  update_pat_for_git_repository.rs
src-tauri/src/application/pull_requests/: get_open_pull_requests.rs
src-tauri/src/data/: application_database.rs
src-tauri/src/domain/: enums.rs  models.rs
src-tauri/src/framework/: commands.rs  dependency_container.rs
src-tauri/src/http/: http_client.rs
src-tauri/src/infrastructure/: secret_storage.rs
src-tauri/src/infrastructure/azure_devops/: enums.rs  models.rs  repository.rs
src-tauri/src/infrastructure/database/: connection.rs  daos.rs  repositories.rs
src-tauri/src/logic/: devops.rs  organizations.rs
src-tauri/src/model/: devops.rs  requests.rs  responses.rs
src-tauri/src/model/core/: organization.rs
src-tauri/src/model/devops/: comment.rs  comment_type.rs  commit.rs  connection_data.rs  devops_user.rs  git_repository.rs  label.rs  link.rs  project.rs  pull_request.rs  pull_request_comment_thread.rs  pull_request_comment_thread_status.rs  response.rs
src-tauri/src/model/requests/: devops_request.rs  paged_request.rs  work_item_batch_request.rs
src-tauri/src/model/responses/: paged_response.rs
src-tauri/src/repositories/: devops.rs  organizations.rs
src/components/: Checkbox.tsx  DarkModeToggle.tsx  Input.tsx  Label.tsx  Panel.tsx  Stack.tsx  Table.tsx  Tag.tsx  Toast.tsx
src/components/busy/: BusySpinner.tsx  BusySpinnerOverlay.tsx
src/components/button/: DefaultButton.tsx  IconButton.tsx  PrimaryButton.tsx
src/components/dialogs/: BaseDialog.tsx  ConfirmGitRepositoryDeleteDialog.tsx  ConfirmOrganizationDeleteDialog.tsx  UpdatePatDialog.tsx
src/components/panels/: AddAzureDevOpsOrganizationPanel.tsx  AddOrganizationPanel.tsx  GlobalProjectFilterPanel.tsx  GlobalRepositoriesFilterPanel.tsx
src/hooks/: useAddAzureDevOpsOrganizationMutation.tsx  useAddOrganizationMutation.tsx  useBatchedDevopsRequest.tsx  useDevOpsProjects.tsx  useIsDarkModeEnabled.tsx  useOrganizations.tsx  usePullRequests.tsx  useRemoveGitRepositoryMutation.tsx  useRemoveOrganizationMutation.tsx  useRepositories.tsx  useToggleGitRepositoryActiveStateMutation.tsx  useUpdatePatMutation.tsx
src/routes/: GitRepositories.tsx  Organizations.tsx  PullRequests.tsx  __root.tsx
src/store/: store.ts
src/store/models/: applicationModel.ts
src/types/: components.ts  globalNotification.ts
