[workspace]
members = ["src-tauri", "src-libs/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["eugen-meissner", "robin-thoene"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.86"
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
keyring = "2"
log = "0.4.26"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-log = "2.2.1"
tauri-plugin-shell = "2"
tokio = { version = "1.46.1", features = ["rt"] }
ts-rs = "6.2.1"
